@@ -5,10 +5,12 @@
 	all : added `contains` and `keyValueIterator` methods to haxe.ds.ReadOnlyArray
 	all : fixed super constructor call when extending externs (#7837, #9501)
 	all : fixed compiler crash for "--run" argument without a value (#9513)
+	all : fixed local variable name collision in `try..catch` (#9533)
 	display : fixed completion for out-of-bounds argument in a call (#9435)
 	display : fixed "find references" through interfaces (#9470)
 	display : optimized "find references" (#9504)
 	display : optimized "server/invalidate" requests (#9509)
+	jvm : added "--java-lib-extern" to use jar files as externs without adding them to the compiled project (#9515)
 	macro : fixed type intersection syntax in macro reification (#9404)
 	lua : fixed lua code generation without `--main` compilation argument (#9489)
 	php : added an overload signature for `session_set_cookie_params` function (#9507)
